--- a/MovieApp/Views/Shared/_Layout.cshtml
+++ b/MovieApp/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">
                 <!--<img
                 src="https://www.orbiszlin.cz/wp-content/uploads/2019/11/ORBIS_zakladni_logo_uprava.png"
                 class="img-fluid" style="max-height: 40px;" />-->
@@ -32,10 +32,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Seznam filmů</a>
+                        <a class="nav-link active" aria-current="page" asp-controller="Movie" asp-action="Index">Seznam filmů</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Přidat film</a>
+                        <a class="nav-link" asp-controller="Movie" asp-action="Add">Přidat film</a>
                     </li>
                 </ul>
             </div>
