Added comments for each file type  in this project

--- a/MovieApp/Views/Home/Index.cshtml
+++ b/MovieApp/Views/Home/Index.cshtml
@@ -2,4 +2,10 @@
     ViewData["Title"] = "Domovská stránka";
 }
 
+@* 
+
+Šablona pro domovskou stránku.
+
+ *@
+
 <h1>Vítejte v databázi filmů</h1>
