--- a/MovieApp/Views/Shared/_Layout.cshtml
+++ b/MovieApp/Views/Shared/_Layout.cshtml
@@ -3,6 +3,14 @@
 <html>
 <!-- hlavicka HTML dokumentu, jsou v ni nějaké metadata, titulek, načítání stylů-->
 
+@* 
+Výchozí šablona, je to nějaké rozvržení stránky, jsou v ní všechny elementy, které jsou společné pro všechny podstránky.
+Například menu, patička atd.. Je struktura HTML stránky, načítají se styly, případně javascripty.
+
+Obsah podstránek se nahradí pomocí @RenderBody() na řádku 53.
+
+*@
+
 <head>
     <title>Databaze filmů - @ViewData["Title"]</title>
     <meta charset="UTF-8">
